# representation-geometry-mlops

./: .gcloudignore  .pre-commit-config.yaml  LICENSE  README.md  cloudbuild.yaml  link_model.py  pyproject.toml  tasks.py
.devcontainer/: devcontainer.json
.dvc/: config
.github/workflows/: cml-data.yaml  data-change.yaml  docker-build.yaml  linting.yaml  model-registry-change.yaml  pre-commit-update.yaml  tests.yaml
configs/: config.yaml
configs/api/: logging.conf
configs/data/: cifar10.yaml  stl10.yaml
configs/experiment/: baseline_mlp_cifar10.yaml  baseline_mlp_stl10.yaml  baseline_resnet18_cifar10.yaml  baseline_resnet18_stl10.yaml  baseline_resnet_cifar10.yaml  full_comparison.yaml  seed_sweep.yaml
configs/model/: mlp.yaml  resnet18.yaml
data/: raw.dvc
dockerfiles/: api.dockerfile  train-cuda.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
reports/: README.md
scripts/: check_drift.py
src/representation_geometry/: api.py  data.py  dataset.py  drift.py  evaluate.py  model.py  registry.py  train.py  utils.py
tests/: test_api.py  test_data.py  test_drift.py  test_model.py
tests/performancetests/: locustfile.py  test_model.py
