[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "representation_geometry"
version = "0.0.1"
description = "Reproducible experiments studying representation geometry stability across random seeds."
authors = [
  { name = "Yu", email = "s252683@dtu.dk" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.128.0",
    "torch==2.6.0",
    "typer==0.21.1",
    "torchvision==0.21.0",
    "uvicorn==0.34.0",
    "lightning>=2.4.0",
    "wandb>=0.18.0",
    "hydra-core>=1.3.0",
    "dvc>=3.0.0",
    "dvc-gs>=3.0.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0",
    "tqdm>=4.66.0",
]

[project.scripts]
rep-geom-train = "representation_geometry.train:main"
rep-geom-evaluate = "representation_geometry.evaluate:main"
rep-geom-preprocess = "representation_geometry.data:main"
rep-geom-visualize = "representation_geometry.visualize:main"

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.1",
    "mkdocs-material==9.4.6",
    "mkdocs==1.6.1",
    "pre-commit==4.5.1",
    "pytest==8.3.4",
    "ruff==0.14.13",
    "mkdocstrings-python==2.0.1",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv]
dev-dependencies = []

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]
