[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "representation_geometry"
version = "0.0.1"
description = "Reproducible experiments studying representation geometry stability across random seeds."

requires-python = ">=3.12"
dependencies = [
    "fastapi==0.128.0",
    "torch==2.6.0",
    "typer==0.21.1",
    "torchvision==0.21.0",
    "uvicorn==0.40.0",
    "lightning>=2.4.0",
    "wandb>=0.18.0",
    "hydra-core>=1.3.0",
    "dvc>=3.0.0",
    "dvc-gs>=3.0.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0",
    "tqdm>=4.66.0",
]

[project.scripts]
rep-geom-train = "representation_geometry.train:main"
rep-geom-evaluate = "representation_geometry.evaluate:main"
rep-geom-data = "representation_geometry.data:data_sync"
rep-geom-visualize = "representation_geometry.visualize:main"
rep-geom-report = "representation_geometry.dataset:main"

[dependency-groups]
dev = [
    "coverage==7.13.1",
    "invoke==2.2.1",
    "mkdocs-material==9.7.1",
    "mkdocs==1.6.1",
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "ruff==0.14.13",
    "mkdocstrings-python==2.0.1",
    "httpx>=0.28.1",
]


# NOTE:
# - Default install (all platforms): use the PyPI wheels (CPU on Linux/Windows, MPS on macOS).
# - Linux + CUDA 12.4: install with
#   uv sync --dev --reinstall --index pytorch-cuda=https://download.pytorch.org/whl/cu124

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]
